env/code_53e9d6bf0d7c8/stderr.txt
  File "main.py", line 2
    printf "sdfs"
                ^
SyntaxError: invalid syntax
